# rust-message-segment-calculator

./: Cargo.toml  README.md
src/: encoded_char.rs  lib.rs  main.rs  segment.rs  segmented_message.rs  user_data_header.rs
src/utils/: mod.rs  smart_encoding_map.rs  unicode_to_gsm.rs  utils.rs
tests/: lib.rs
